--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .NavigationItem {
 	color: #fff;
 }
+
+.content {
+	margin-top: 60px;
+}
+
+.exercise-list img {
+	height: 100px;
+	width: 100px;
+}
