added col styling

--- a/src/Components/header.scss
+++ b/src/Components/header.scss
@@ -1,5 +1,12 @@
 /*@import url("https://www.westminster.gov.uk/sites/www.westminster.gov.uk/themes/wcc/css/main-sm.css");
 @import url("https://www.westminster.gov.uk/sites/www.westminster.gov.uk/themes/wcc/css/content-sm.css");*/
+body {
+  background: #F3F4FF;
+}
+
+body, input, textarea {
+  font-family: "Open Sans", sans-serif;
+}
 
 .top-bar {
 	height: 50px;
@@ -20,13 +27,20 @@
 }
 
 .sp-head {
-	    background: #ffdc53;
-    padding-left: 100px;
+	background: #ffdc53;
+  padding-left: 100px;
+  position: relative;
+  z-index: 1000;
+  margin-bottom: 20px;
+  //margin-left: -80px;
+  //margin-right: -80px;
 }
 
 .sp-head h1 {
     font-size: 24px;
     padding: 28px 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .sp-head .go-up {
@@ -35,12 +49,29 @@
     width: 80px;
     line-height: 84px;
     border-right: 0;
-
-        position: absolute;
+    position: absolute;
     color: #fff;
     left: 0;
     top: 0;
     height: 100%;
     text-align: center;
+}
+
+.content {
+  background: #fff;
+}
+
+.content.exercise-list.container {
+  // padding-left: 80px;
+  // padding-right: 80px;
+  margin-top: 0;
+}
+
+.sp-breadcrumbs {
+  margin: 0 -80px;
+  padding: 12px 10px;
+  font-size: 13px;
+  color: #292b36;
+  display: block;
 }
 
