--- a/src/Components/Calendar/calendar-list.scss
+++ b/src/Components/Calendar/calendar-list.scss
@@ -2,6 +2,9 @@
   border-bottom: 1px solid #c0cbc4;
   padding-bottom: 20px;
   padding-top: 20px;
+  &:last-child {
+    border-bottom: 0;
+  }
 }
 
 
@@ -18,6 +21,12 @@
   padding-top: 20px;
   h3 {
     font-weight: 600;
+    margin-top: 0;
+  }
+}
+
+.event-info {
+  h3 {
     margin-top: 0;
   }
 }
