--- a/src/Components/Calendar/calendar-list.scss
+++ b/src/Components/Calendar/calendar-list.scss
@@ -77,7 +77,7 @@
     color: #666666;
   }
 }
-  .audience-item {
+  .event-item,.audience-item {
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
@@ -100,6 +100,9 @@
       text-decoration: none;
       color: white;
     }
+  }
+  .audience-item {
+    background-color: #aa3f2a;
   }
 
   .sp-content .views-widget-filter-field_event_type_tid, .sp-content .views-widget-filter-field_event_audience_tid {
