--- a/src/Components/Calendar/calendar-list.scss
+++ b/src/Components/Calendar/calendar-list.scss
@@ -180,3 +180,23 @@
   border-left-color: #ccc;
   right: 1em;
 }
+
+
+
+
+
+.react-datepicker__input-container {
+  width: 100%;
+}
+
+.react-datepicker__close-icon {
+  top: 18px;
+  position: absolute;
+  right: -3px;
+  color: #999;
+  backgroud-color: #999;
+  &::after {
+    background-color: #999;
+  }
+}
+
