added single event styling

--- a/src/Components/header.scss
+++ b/src/Components/header.scss
@@ -10,8 +10,8 @@ body, input, textarea {
 
 .top-bar {
 	height: 50px;
-	    margin: 0 -40px;
-    padding: 0 40px;
+	//margin: 0 -40px;
+  //padding: 0 40px;
     background: #0d0e16;
     background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
     background: -moz-linear-gradient(left, #0d0e16 15%, #0b2265 50%, #0d0e16 85%);
@@ -68,7 +68,7 @@ body, input, textarea {
 }
 
 .sp-breadcrumbs {
-  margin: 0 -80px;
+  //margin: 0 -80px;
   padding: 12px 10px;
   font-size: 13px;
   color: #292b36;
